# UMS_Studio_prototype

./: .gitignore  README.md  UMS-Studio.spec  pyproject.toml
data/machines/: mock_machine_config.json
src/ums_studio/: __main__.py
src/ums_studio/app/: host_protocol.py  host_protocol_v2.py  mock_motion_generator.py  projects.py
src/ums_studio/core/: command_model.py  errors.py  execution_context.py  execution_controller.py  machine_registry.py  machine_session.py  machine_state.py  mock_machine.py  mock_test_square.ums  motion_segments.py  planner_interface.py  runtime.py
src/ums_studio/core/compiler/: __init__.py  diagnostics.py  gcode_emitter.py  machine_profile.py  native_packet_emitter.py  native_packet_streamer.py  pipeline.py  preview.py  streamer.py  targets.py
src/ums_studio/firmware/protocol/: ums_dispatch.c  ums_protocol.c  ums_protocol.h  ums_state.c  ums_transport.h  ums_transport_uart.c
src/ums_studio/language/: ast_nodes.py  gcode_converter.py  language_spec.py  parser.py  tokenizer.py  validator.py  validator_rules.py
src/ums_studio/machines/mock_machines/: machine_config.json
src/ums_studio/planner/: planner_arc.py  planner_linear.py  planner_registry.py
src/ums_studio/transport/: serial_transport.py  tcp_transport.py  transport_base.py  transport_mock.py  transport_registry.py
src/ums_studio/ui/panels/: compiler_panel.py  connection_panel.py  execution_panel.py  machine_control_panel.py  project_selector.py  status_bar.py
src/ums_studio/ui/widgets/: connection_indicator.py  console_widget.py  dro_widget.py  (+2 more)
tests/: test_compiler.py
(+1 files in other folders)
